--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-/>
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Una plataforma que te inspira a escribir desde cero. Disfrutá de ideas creativas, redactá con herramientas intuitivas y guardá tus textos favoritos." />
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <meta name="author" content="Giuliana Lamontanaro" />
+  <meta name="copyright" content="© 2025 Writer's desktop" />
+
+  <meta name="keywords"
+    content="escritura, creatividad, ideas para escribir, disparadores creativos, textos, inspiración, app de escritura" />
+
+  <meta property="og:title" content="Writer's desktop" />
+  <meta property="og:description" content="Empezá a escribir con ideas únicas. Una app para liberar tu creatividad." />
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:url" content="https://writterdesktop-production.up.railway.app" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Writer's desktop" />
+  <meta name="twitter:description" content="Empezá a escribir con ideas únicas. Una app para liberar tu creatividad." />
+  <meta name="twitter:image" content="/logo.png" />
+
+  <title>Writer's desktop | Desbloqueá tu creatividad para escribir</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
