feature: Limpieza de codigo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <link rel="icon" type="image/svg+xml" href="/logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Una plataforma que te inspira a escribir desde cero. Disfrutá de ideas creativas, redactá con herramientas intuitivas y guardá tus textos favoritos." />
@@ -17,14 +17,14 @@
 
   <meta property="og:title" content="Writer's desktop" />
   <meta property="og:description" content="Empezá a escribir con ideas únicas. Una app para liberar tu creatividad." />
-  <meta property="og:image" content="/logo.png" />
+  <meta property="og:image" content="/logo.webp" />
   <meta property="og:url" content="https://writterdesktop-production.up.railway.app" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Writer's desktop" />
   <meta name="twitter:description" content="Empezá a escribir con ideas únicas. Una app para liberar tu creatividad." />
-  <meta name="twitter:image" content="/logo.png" />
+  <meta name="twitter:image" content="/logo.webp" />
 
   <title>Writer's desktop | Desbloqueá tu creatividad para escribir</title>
 </head>
